# transcendent-multiclass

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cce.py  ce.py  concept_drift.ipynb  docker-compose.yaml  ice.py  package-lock.json  package.json  plot_result.py  pyproject.toml  release.config.js  requirements.txt  run.sh  setup.py  tce.py  truncated_samples_per_family.csv
.github/workflows/: check.yml  deploy-image.yml  deploy.yml
dataset/: malware_dataset.py
dataset/.ipynb_checkpoints/: malware_dataset-checkpoint.py
dataset/builder/: build_capa_dataset.py  malware_features_dataset_builder.py
dataset/config/: config.py
dataset/config/.ipynb_checkpoints/: config-checkpoint.py
dataset/data_split_analysis/: best_splits.ipynb  day_split_focus.ipynb  month_splits.ipynb  train_test_family_dist.ipynb
dataset/data_split_analysis/.ipynb_checkpoints/: train_test_family_dist-checkpoint.ipynb
dataset/data_split_analysis/utils/: best_split_utils.py
dataset/setup_dataset/: merge_vt_siggregator.ipynb
ember/: extract_ember.py
hidost/: extract_hidost.py  rf.py
tests/: test_math.py
transcend/: calibration.py  scores.py  thresholding.py  utils.py
transcend/classifiers/: ncm_classifier.py  random_forest.py
transcendent/: calibration.py  data.py  scores.py  thresholding.py  utils.py
transcendent/classifiers/: ncm_classifier.py  random_forest.py
