[tool.poetry]
name = "transcendent-multiclass__Wdis"
packages = [
    { include = "transcendent" },
]
version = "1.0.0"
description = "Transcendent adaptation for multiclass problems"
authors = ["Luca Fabri <luca.fabri1999@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.8.0"
mypy = "^1.15.0"
ruff = "^0.11.6"
pytest = "^8.3.5"
contourpy = "1.3.1"
cycler = "0.12.1"
fonttools = "4.56.0"
joblib = "1.4.2"
kiwisolver = "1.4.8"
matplotlib = "3.10.0"
numpy = "2.2.3"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2025.1"
scikit-learn = "1.6.1"
scipy = "1.15.2"
seaborn = "0.13.2"
six = "1.17.0"
termcolor = "2.5.0"
tesseract = "0.1.3"
threadpoolctl = "3.5.0"
tqdm = "4.67.1"
tzdata = "2025.1"
ujson = "5.10.0"

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy transcendent tests"
compile = "python -m compileall transcendent tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
